--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
       "eslint --fix"
     ]
   },
-  "main": "dist/index.js",
+  "main": "dist/stats.js",
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
     "all": true,
@@ -125,5 +125,5 @@
     "test": "nyc mocha --recursive -r source-map-support/register -r ts-node/register -r tsconfig-paths/register --use_strict --exit \"tests/**/*.+(unit|it).+(ts|js)\"",
     "unit": "nyc mocha --recursive -r source-map-support/register -r ts-node/register -r tsconfig-paths/register --use_strict --exit \"tests/**/*.unit.+(ts|js)\""
   },
-  "types": "dist/index.d.ts"
+  "types": "dist/stats.d.ts"
 }
