--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     }
   },
   "dependencies": {
-    "@asserted/models": "^5.0.0",
+    "@asserted/models": "^5.0.1-7",
     "@types/luxon": "^1.22.0",
     "lodash": "^4.17.15",
     "luxon": "^1.22.2"
