--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@asserted/stats",
   "description": "Basic stat aggregation library for asserted",
-  "version": "1.0.4",
+  "version": "1.0.5-0",
   "author": "Eric Hacke",
   "bugs": {
     "url": "https://github.com/assertedio/stats/issues"
