--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     }
   },
   "dependencies": {
-    "@asserted/models": "^5.0.1-20",
     "@types/luxon": "^1.22.0",
     "lodash": "^4.17.15",
     "luxon": "^1.22.2"
   },
   "devDependencies": {
+    "@asserted/models": "^6.0.0",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@ehacke/commitlint-config": "^1.0.2",
@@ -102,6 +102,7 @@
     ]
   },
   "peerDependencies": {
+    "@asserted/models": "^6.0.0",
     "class-validator": "^0.11.1"
   },
   "repository": {
