--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@asserted/stats",
   "description": "Basic stat aggregation library for asserted",
-  "version": "1.0.4",
+  "version": "1.0.5-10",
   "author": "Eric Hacke",
   "bugs": {
     "url": "https://github.com/assertedio/stats/issues"
@@ -12,12 +12,12 @@
     }
   },
   "dependencies": {
-    "@asserted/models": "^5.0.0",
     "@types/luxon": "^1.22.0",
     "lodash": "^4.17.15",
     "luxon": "^1.22.2"
   },
   "devDependencies": {
+    "@asserted/models": "^6.0.0",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@ehacke/commitlint-config": "^1.0.2",
@@ -28,8 +28,8 @@
     "@types/lodash": "^4.14.144",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.1",
-    "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "@typescript-eslint/parser": "^2.27.0",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
     "chai": "^4.2.0",
     "class-validator": "^0.11.1",
     "commitizen": "^4.0.4",
@@ -41,8 +41,8 @@
     "eslint-plugin-simple-import-sort": "^5.0.2",
     "fixpack": "^3.0.5",
     "getenv": "^1.0.0",
-    "husky": "^4.2.3",
-    "lint-staged": "^10.1.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.1.3",
     "mocha": "^7.1.1",
     "nyc": "^15.0.0",
     "prettier": "^2.0.2",
@@ -102,6 +102,7 @@
     ]
   },
   "peerDependencies": {
+    "@asserted/models": "^6.0.0",
     "class-validator": "^0.11.1"
   },
   "repository": {
